--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -3,9 +3,9 @@
   <!-- Meter Id Column -->
   <ng-container matColumnDef="meterId">
     <th mat-header-cell *matHeaderCellDef> Meter Id </th>
-    <td mat-cell *matCellDef="let row"> {{row.Meter_ID}} </td>
+    <td mat-cell *matCellDef="let row"> {{row}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selectMeter.emit(row)"></tr>
 </table>
