hook up data to chart

--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,2 +1,4 @@
 <app-table [dataSource]="meterIds$ | async" (selectMeter)="onSelectMeter($event)"></app-table>
-<app-chart [meterData]="meterData$ | async"></app-chart>
+<ng-container *ngIf="meterData$ | async as meterData">
+  <app-chart *ngIf="meterData.BaseLoad.length" [meterData]="meterData"></app-chart>
+</ng-container>
